Fix: Tour-banner didn't adjust to screen size, fixed that and used object-position to correct for overflow positioning on image.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,6 +333,8 @@ p{
 .tour-banner-container img{
     height: 400px;
     object-fit: cover;
+    object-position: 10% 20%;
+    width: fit-content;
 }
 
 /*-----------Tours: Comms Panel--------------*/
